# Lncvrt-Games-launcher

./: .env  .env.example  eslint.config.ts  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json  windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: GlobalProvider.tsx  Globals.css  Installs.css  layout.tsx  page.tsx
src/app/componets/: Setting.css  Setting.tsx  Sidebar.css  Sidebar.tsx  VersionChangelog.tsx  VersionInfo.tsx  VersionUpdateWarning.tsx
src/app/game/: page.tsx
src/app/game/berrydash/leaderboards/: page.tsx  styles.css
src/app/main/: Installs.css  layout.tsx  page.tsx
src/app/main/game/: page.tsx
src/app/main/game/berrydash/leaderboards/: page.tsx  styles.css
src/app/main/settings/: page.tsx
src/app/settings/: page.tsx
src/app/types/: DownloadProgress.ts  Game.ts  GameVersion.ts  SettingProps.ts  SettingsType.ts  VersionsConfig.ts
src/app/update/: layout.tsx
src/app/update/checking/: page.tsx
src/app/update/outdated/: page.tsx
src/app/update/updating/: page.tsx
src/app/util/: BazookaManager.ts  Clipboard.ts
src/components/: Dropdown.tsx  Setting.tsx  Sidebar.tsx
src/components/popups/: GamesDownload.tsx  ModDownloads.tsx  VersionsDownload.tsx
src/componets/: ProgressBar.tsx  Setting.tsx  Sidebar.css  Sidebar.tsx
src/componets/popups/: Downloads.tsx  ManageVersion.tsx  ModDownloads.tsx  VersionInfo.tsx  VersionVersion.tsx  VersionsDownload.tsx
src/lib/: BazookaManager.ts  BerryDash.ts  Clipboard.ts  Util.ts  clipboard.ts  notifications.ts  util.ts
src/popups/: Downloads.tsx  GamesDownload.tsx  ManageGame.tsx  ManageVersion.tsx  ModDownloads.tsx  VersionChangelog.tsx  VersionsDownload.tsx
src/providers/: GlobalProvider.tsx
src/styles/: dropdown.css  globals.css  setting.css  sidebar.css
src/types/: DownloadProgress.ts  GameVersion.ts  LeaderboardEntry.ts  LeaderboardResponse.ts  Mod.ts  NormalConfig.ts  ServerVersionsResponse.ts  SettingProps.ts  SettingsType.ts  VersionsConfig.ts
src/types/BerryDash/: BirdColor.ts
