[package]
name = "lncvrt-games-launcher"
version = "1.6.5"
authors = ["Lncvrt"]
edition = "2024"

[lib]
name = "lncvrt_games_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-os = "2.3.2"
reqwest = { version = "0.13.2", default-features = false, features = ["stream", "rustls"] }
tokio = "1.50.0"
futures-util = { version = "0.3.32", features = ["io"] }
tauri-plugin-fs = "2.4.5"
zip = "8.2.0"
libc = "0.2.183"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-http = "2.5.7"

[target.'cfg(target_os = "linux")'.dependencies]
shlex = "1.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.0"


