[package]
name = "lncvrt-games-launcher"
version = "1.8.1"
authors = ["Lncvrt"]
edition = "2024"

[lib]
name = "lncvrt_games_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-os = "2.3.2"
reqwest = { version = "0.13.2", default-features = false, features = ["stream", "rustls"] }
tokio = "1.50.0"
futures-util = { version = "0.3.32", features = ["io"] }
tauri-plugin-decorum = "1.1.1"
tauri-plugin-fs = "2.4.5"
zip = "8.4.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2.3.3"
sha2 = "0.11.0"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-prevent-default = "4.0.4"
openssl = { version = "0.10.76", features = ["v110", "vendored"] }
base64 = "0.22.1"
tauri-plugin-http = "2.5.7"
dashmap = "6.1.0"
tauri-plugin-store = "2.4.2"
hex = "0.4.3"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
sysinfo = "0.38.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-decorum = "1.1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
